# wp-wv-project-ms

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
src/: cli.py  docs.py  main.py
src/core/: config.py
src/database/: connect.py  models.py
src/middleware/: authorization.py  logging.py
src/routes/: home.py
src/schemas/: default_schemas.py  requests.py  responses.py
